src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
  color-scheme: dark;
}

.hash-span {
  margin-top: -100px;
  padding-bottom: 100px;
  display: block;
}

.gradient {
  background: #000000; /* fallback for old browsers */
  background: -webkit-linear-gradient(to right, #434343, #000000);
  background: linear-gradient(to right, #434343, #000000);
}

.violet-gradient {
  background: #804dee;
  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
  background: -webkit-linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
}

.green-pink-gradient {
  background: #00cea8;
  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
  background: -webkit-linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
}

.orange-text-gradient,
.green-text-gradient,
.blue-text-gradient,
.pink-text-gradient {
  background: linear-gradient(to top, #f12711, #f5af19);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.translucent-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity by modifying the last value (0.5 in this case) */
  z-index: 9999; /* Adjust the z-index to ensure it's displayed above other elements if necessary */
}

@keyframes spin {
  0%, 100% {
    /* Box shadow styles */
  }
  12.5% {
    /* Box shadow styles */
  }
  25% {
    /* Box shadow styles */
  }
  37.5% {
    /* Box shadow styles */
  }
  50% {
    /* Box shadow styles */
  }
  62.5% {
    /* Box shadow styles */
  }
  75% {
    /* Box shadow styles */
  }
  87.5% {
    /* Box shadow styles */
  }
}

.canvas-loader {
  font-size: 10px;
  width: 1em;
  height: 1em;
  border-radius: 50%;
  position: relative;
  text-indent: -9999em;
  animation: spin 1.1s infinite ease;
  transform: translateZ(0);
}

.stars-canvas-container {
  width: 100%;
  height: auto;
  position: absolute;
  inset: 0;
  z-index: -1;
}

/* global.css */
.input-field {
  display: flex;
  flex-direction: column;
}

.input-label {
  color: #fff;
  font-weight: 600;
  margin-bottom: 16px;
}

.input {
  background: #333; /* Background color */
  padding: 16px 24px;
  color: #fff;
  border: none;
  border-radius: 8px;
  outline: none;
  font-weight: 600;
  placeholder-color: #999; /* Placeholder text color */
}

.input-error {
  color: #ff0000;
}

.submit-button {
  background: #c0c0c0; /* Background color */
  padding: 12px 24px;
  border-radius: 16px;
  outline: none;
  color: #fff;
  font-weight: 600;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Box shadow for the button */
}

.confirmation {
  color: #00ff00;
}

